--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>
       <a
-        href="C:\Users\VIKAS\OneDrive\Desktop\singhslyf.github.io\JSA3-2Task4-4.html"
+        href="JSA3-2Task4-4.html"
       >
         Hello Everyone</a
       >
