Change in project

--- a/index.html
+++ b/index.html
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My First WebPage</title>
+    <title>BOTANICALS</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
-    <h1>
-      <a
-        href="C:\Users\VIKAS\OneDrive\Desktop\singhslyf.github.io\JSA3-2Task4-4.html"
-      >
-        Hello Everyone</a
-      >
-    </h1>
-    <p>My name is Vikas Kumar Singh, and this is my very first web page.</p>
+    <header>
+      <div class="main">
+        <div class="logo"><img src="job595-v347-wan-76-naturalset.jpg" /></div>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Gallery</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+      <div class="title">
+        <h1>BOTANICALS</h1>
+        <nav class="container">
+          <div>
+            <video controls class="video">
+              <source
+                src="John.Wick.Chapter.4.2023.720p.WEBRip.x264.AAC-[YTS.MX].mp4"
+                type="video/mp4"
+              />
+
+              Your browser does not support the video tag.
+            </video>
+          </div>
+        </nav>
+      </div>
+
+      <div class="button">
+        <a href="#" class="btn">Watch Video</a>
+        <a href="#" class="btn">Learn More</a>
+      </div>
+    </header>
   </body>
 </html>
