--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div>
             <video controls class="video">
               <source
-                src="John.Wick.Chapter.4.2023.720p.WEBRip.x264.AAC-[YTS.MX].mp4"
+                src="cg_animation_of_rocket_taking_off (720p)"
                 type="video/mp4"
               />
 
