--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div>
             <video controls class="video">
               <source
-                src="cg_animation_of_rocket_taking_off (720p)"
+                src="cg_animation_of_rocket_taking_off (720p).mp4"
                 type="video/mp4"
               />
 
