--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <video controls class="video">
               <source
                 src="cg_animation_of_rocket_taking_off (720p).mp4"
-                type="video/mp4"
+                type="video/any"
               />
 
               Your browser does not support the video tag.
