--- a/ShirtWebsite.html
+++ b/ShirtWebsite.html
@@ -365,5 +365,7 @@
       myProduct = shirtsArr[index];
       addSform();
     };
+
+    <p style="text-align:center"><a href=StoreManagementSystem.html>Visit my StoreSystem Website</a></p>
   </script>
 </html>
