--- a/StoreManagementSystem.html
+++ b/StoreManagementSystem.html
@@ -645,6 +645,8 @@
 
         return header;
       };
+
+      <p style="text-align:center"><a href=EmployeeSystem.html>Visit my EmployeeManagementSystem Website</a></p>
     </script>
   </body>
 </html>
